--- a/.github/workflow/github-actions-demo.yml
+++ b/.github/workflow/github-actions-demo.yml
@@ -1,18 +1,17 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
-on: [push]
+name: GitlabSync
+run-name: ${{ github.actor }} is testing out sync 🚀
+on:
+  - push
 jobs:
-  Explore-GitHub-Actions:
+  sync:
     runs-on: ubuntu-latest
+    name: Git Repo Sync
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - uses: wangchucheng/git-repo-sync@v0.1.0
+      with:
+        target-url: https://repo.gviet.vn:1443/sigma-livestream/sigma-machine/sync
+        target-username: congnt@gviet.vn
+        target-token: rYH_i9oN6fj7v2FxyoSX
