--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - uses: reijiokito/sync@v0.1.0
+    - uses: reijiokito/sync@main
       with:
         target-url: git@repo.gviet.vn:sigma-livestream/sigma-machine/sync.git
         target-username: congnt@gviet.vn
