--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Git Repo Sync 
     steps:
-    - uses: reijiokito/test-sync@main
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - uses: reijiokito/sync@main
       with:
         target-url: git@gitlab.com:reijiokito/test-sync.git
         target-username: romeothecong
