--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,11 @@
 sync-with-github:
   before_script:
-    - git config --global user.name romeothecong
-    - git config --global user.email romeothecong@gmail.com
+    - git config --global user.name "${GITLAB_USER_NAME}"
+    - git config --global user.email "${GITLAB_USER_EMAIL}"
   script:
-    - git remote add github https://github.com/reijiokito/sync.git
+    - git remote add github $REMOTE_REPOSITORY_URL
     - git checkout main
     - git pull origin main
     - git pull github main
     - git status
-    - git push https://root:glpat-CXxLsauREkZcvmfzmVzY@gitlab.com/reijiokito/test-sync.git HEAD:main     
+    - git push https://root:$ACCESS_TOKEN@$CI_SERVER_HOST/$CI_PROJECT_PATH.git HEAD:main
