--- a/action.yml
+++ b/action.yml
@@ -22,6 +22,8 @@ runs:
       shell: bash
     - run: echo "${{ github.event.ref }}."
       shell: bash
+    - run: chmod +x ${{ github.action_path }}/entrypoint.sh
+      shell: bash      
     - run: ${{ github.action_path }}/entrypoint.sh
       shell: bash
       env:
